<resources>
    <string name="app_name">Catch Phrase</string>
    <string name="new_game_button_text">New Game</string>
    <string name="games_in_progress">Games in Progress:</string>
    <string name="game_deleted">Game successfully deleted.</string>
    <string name="undo">Undo</string>
    <string name="none">None</string>
    <string name="games_completed">Games Completed:</string>
    <string name="got_it">Got it</string>
    <string name="no_passes_left">No passes left</string>
    <string name="game_over">Game over</string>
    <string name="pass_button_text">Pass%%(%d left)</string>
    <string name="team_one_prompt">Team 1: </string>
    <string name="team_one_default_name">Red Boots</string>
    <string name="team_two_prompt">Team 2:</string>
    <string name="team_two_default_name">Blue Shoes</string>
    <string name="vs">vs</string>
    <string name="passes_allowed">Passes allowed:</string>
    <string name="names_prompt">Names:</string>
    <string name="default_passes_allowed">1</string>
    <string name="goal_score_prompt">Playing to</string>
    <string name="new_game_dialog_title">New Game</string>
    <string name="ok">OK</string>
    <string name="default_goal_score">7</string>
    <string name="steal_dialog_title">Steal</string>
    <string name="steal_dialog_message">Could the other team guess the word?</string>
    <string name="steal_dialog_positive">Yes</string>
    <string name="steal_dialog_negative">No</string>
    <string name="game_over_dialog_message">%s won!</string>
    <string name="team_one_name_hint">Team 1 name</string>
    <string name="team_two_name_hint">Team 2 Name</string>
    <string name="confirm_next_round_message">Tap %1$s to start%2$s.</string>
    <string name="confirm_next_round_title">Start %sround</string>
    <string name="help_title">Help</string>
    <string name="help_dialog_title">Help</string>
    <string name="help_dialog_message">Catch Phrase is a party game for the whole family.\n\tAn even number of players sit in a circle, and every other person is on a team. The player holding the phone tries to get anyone on his team to guess the phrase in the middle of the screen, without saying any part of the word, or version of it. For example, if the phrase is \"baseball bat,\" he may not say any of the following words: \"baseball,\" \"bat,\" \"base,\" \"ball,\" \"bats,\" etc.\n\tIf he can\'t get his team to guess the word, he may pass, but he can only pass so many times before he\'s stuck with the word he has. Once his team has guessed the phrase, he passes the device to the person to his left. She should tap %s and try to get her team to guess her word.\n\tWhen the buzzer runs out, the team that is not holding the phone gets a point. If that team can also guess the word their opponents were supposed to guess, they score an additional point.\n\tOnce one team has reached a certain number of points (configurable), they win!</string>
    <string name="modify_scores_title">Modify scores</string>
    <string name="modify_scores_dialog_title">Adjust Points</string>
    <string name="increment_text">+</string>
    <string name="decrement_text">-</string>
    <string name="confirm_next_round_is_next">" the next round"</string>
    <string name="confirm_next_round_is_not_next"/>
    <string name="confirm_next_round_title_is_not_next"/>
    <string name="confirm_next_round_title_is_next">"next "</string>
    <string name="settings_title">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
