<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/new_game_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/new_game_dialog_padding">

        <LinearLayout
            android:id="@+id/team_one_name_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            android:weightSum="3">

            <EditText
                android:id="@+id/team_one_name_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/team_one_name_hint"
                android:imeOptions="actionNext"
                android:inputType="textAutoCorrect|textCapWords"
                android:padding="@dimen/new_game_dialog_padding"
                android:textColor="@color/teamOne"
                android:textSize="@dimen/new_game_dialog_text_size"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/vs_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/team_one_name_prompt"
            android:gravity="center"
            android:text="@string/vs"
            android:textSize="@dimen/new_game_dialog_text_size"
            />

        <LinearLayout
            android:id="@+id/team_two_name_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/vs_text_view"
            android:orientation="horizontal"
            android:weightSum="3">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/team_two_name_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="end"
                android:hint="@string/team_two_name_hint"
                android:imeOptions="actionNext"
                android:inputType="textAutoCorrect|textCapWords"
                android:padding="@dimen/new_game_dialog_padding"
                android:textColor="@color/teamTwo"
                android:textSize="@dimen/new_game_dialog_text_size"/>
        </LinearLayout>

        <TextView
            android:id="@+id/passes_allowed_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/team_two_name_prompt"
            android:text="@string/passes_allowed"
            android:textSize="@dimen/new_game_dialog_text_size"/>

        <LinearLayout
            android:id="@+id/passes_allowed_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passes_allowed_prompt"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/team_one_passes_allowed_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/default_passes_allowed"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:padding="@dimen/new_game_dialog_padding"
                android:textColor="@color/teamOne"
                android:textSize="@dimen/new_game_dialog_text_size"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="2"/>

            <EditText
                android:id="@+id/team_two_passes_allowed_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/default_passes_allowed"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:padding="@dimen/new_game_dialog_padding"
                android:textColor="@color/teamTwo"
                android:textSize="@dimen/new_game_dialog_text_size"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/passes_allowed_field"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/goal_score_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal_score_prompt"
                android:textSize="@dimen/new_game_dialog_text_size"/>

            <EditText
                android:id="@+id/goal_score_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/default_goal_score"
                android:imeOptions="actionGo"
                android:inputType="number"
                android:padding="@dimen/new_game_dialog_padding"
                android:textSize="@dimen/new_game_dialog_text_size"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>